2010-04-08 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* AUTHORS, src/arguments.c, src/arguments.h
	  doc/dfu-programmer.1: Added the patch Mitko sent
	  to enable at32uc3b1512 and at32uc3b0512 chips.

2010-02-15 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* config.h.in, configure.ac, AUTHORS, src/commands.c,
	  src/dfu.c, src/dfu-device.h, src/dfu.h, src/main.c:
	  Added the patch Torsten Rottmann sent to enable
	  libusb 1.0 support, plus I some changes to allow for
	  switching via a configure file flag.

2010-02-15 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, dfu-programmer.1,
	  AUTHORS: Added the patch Dave Fletcher sent to
	  enable atmega32u2 support.

2009-09-09 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/commands.c: Fix a bug due to the order of the
	  bootloader suppression and the lower boundary
	  verification.  Additionally, fixed an off by 1 error
	  in the flash address verification.

2009-08-22 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* fedora/dfu-programmer.spec.in, configure.ac, NEWS:
	  Updated to the new 0.5.2 release.

2009-08-13 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/arguments.c, src/arguments.h, src/atmel.c,
	  src/commands.c: Fixed the broken state that the AVR
	  devices were in due to not selecting the correct memory
	  page prior to flashing.  Broke apart the
	  eeprom/flash/user page flashing/dumping into separate
	  functions so the maintenance will be easier.  Cleaned
	  up the address ranges so they are consistent across
	  memory types.  Fixed some debug statements that should
	  have been going to stderr instead of stdout that made
	  the output of a dump garbled.  Cleaned up some more
	  off by 1 errors that were in the dump functionality.
	  Verified my changes on my AVR32 and AVR boards.

2009-05-31 Weston Schmidt <weston_schmidt@alumni.purdue.edu>
	* src/atmel.c: Fix a memory address identification bug